광고 플랜, 페이먼츠 테이블 등록
